--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@use-it/interval": "^1.0.0",
     "ml5": "^0.12.2",
     "react": "^18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-gauge-chart": "^0.4.0",
     "react-scripts": "5.0.1",
