--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@use-it/interval": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "ml5": "^0.12.2",
     "react": "^18.1.0",
     "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-gauge-chart": "^0.4.0",
     "react-scripts": "5.0.1",
+    "twilio": "^3.77.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
