--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@use-it/interval": "^1.0.0",
     "cors": "^2.8.5",
+    "dotenv-webpack": "^7.1.0",
     "express": "^4.18.1",
     "ml5": "^0.12.2",
     "react": "^18.1.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "dotenv": "^16.0.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
