--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pantherhacks2022",
   "version": "0.1.0",
+  "homepage": "https://dxiao01.github.io/PantherHacks2022",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -21,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "dotenv": "^16.0.1",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
